--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2",
     "swiper": "^11.2.10",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
