--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.540.0",
+    "nanoid": "^5.1.6",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
