--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "crypto-js": "^4.2.0",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "firebase": "^12.1.0",
